src/objects/Subscription_History_Temp_Stop__c.object
<CustomObject>
    <fields>
        <fullName>Inactive_Sub_Temp_Stop_Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Inactive Sub Temp Stop Legacy Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_By__c</fullName>
        <label>Legacy Create By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Create_Date__c</fullName>
        <label>Legacy Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_By__c</fullName>
        <label>Legacy Update By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Update_Date__c</fullName>
        <label>Legacy Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_History_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription History ID</label>
        <referenceTo>Subscription_History__c</referenceTo>
        <relationshipLabel>Subscription History Temp Stop</relationshipLabel>
        <relationshipName>Subscription_History_Temp_Stop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temp_Stop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Temp Stop</label>
        <referenceTo>Temp_Stop__c</referenceTo>
        <relationshipLabel>Subscription History Temp Stop</relationshipLabel>
        <relationshipName>Subscription_History_Temp_Stop</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscription History Temp Stop</label>
    <nameField>
        <label>Subscription History Temp Stop Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription History Temp Stop</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>